# python-project-lvl2

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
gendiff/: core.py
gendiff/scripts/: gendiff.py
tests/: test_core.py
